# Tengine

./: CMakeLists.txt  android_build_armv7.sh  android_build_armv8.sh  linux_build_x86.sh
cmake/: executor.cmake
core/lib/: graph_executor.cpp
examples/yolov2/: CMakeLists.txt
executor/operator/common/: absval.cpp  init.cpp  sigmoid.cpp  tanh.cpp
executor/plugin/: init.cpp
operator/include/operator/: absval.hpp  sigmoid.hpp  tanh.hpp
operator/operator/: absval.cpp  convolution.cpp  sigmoid.cpp  tanh.cpp
operator/plugin/: init.cpp
serializer/caffe/: caffe_serializer.cpp
wrapper/: CMakeLists.txt
